workaround for linear gradient bug on safari. Marin added to homepage description

--- a/src/App.css
+++ b/src/App.css
@@ -514,7 +514,7 @@ p {
 .fade {
   background: linear-gradient(
     to bottom,
-    transparent 0%,
+    rgba(255, 255, 255, 0) 0%,
     rgb(255, 255, 255) 50%
   );
   height: 100px;
